Changed headers in cors configuration